--- a/src/components/ChatList/ChatList.module.css
+++ b/src/components/ChatList/ChatList.module.css
@@ -1,4 +1,3 @@
-/* Загальний стиль для контейнера списку чатів */
 .chatListContainer {
   flex: 1;
   overflow-y: auto;
@@ -6,7 +5,6 @@
   margin-top: 20px;
 }
 
-/* Хмаринка для окремого чату */
 .chatList {
   background-color: #fff;
   border-radius: 15px;
@@ -18,7 +16,6 @@
   align-items: center;
 }
 
-/* Стиль для назви чату */
 .chatTitle {
   font-size: 16px;
   color: #333;
@@ -26,13 +23,11 @@
   margin: 0;
 }
 
-/* Загальний стиль для кнопок дій */
 .actionBtns {
   display: flex;
-  gap: 10px; /* Відступ між кнопками */
+  gap: 10px;
 }
 
-/* Стиль для кнопки редагування та видалення */
 .editBtn,
 .listBtn {
   background: none;
@@ -40,21 +35,20 @@
   cursor: pointer;
   width: 24px;
   height: 24px;
-  color: #007bff; /* Колір для редагування */
+  color: #007bff;
   font-size: 16px;
-  transition: color 0.3s ease; /* Зміна кольору при наведенні */
+  transition: color 0.3s ease;
 }
 
 .editBtn:hover,
 .listBtn:hover {
-  color: #0056b3; /* Темніший відтінок при наведенні */
+  color: #0056b3;
 }
 
-/* Специфічний стиль для кнопки видалення */
 .listBtn {
-  color: #ff6b6b; /* Колір для видалення */
+  color: #ff6b6b;
 }
 
 .listBtn:hover {
-  color: #ff4757; /* Темніший відтінок при наведенні */
+  color: #ff4757;
 }
