--- a/src/components/EditChat/EditChat.module.css
+++ b/src/components/EditChat/EditChat.module.css
@@ -1,4 +1,3 @@
-/* EditChatModal.module.css */
 .modal {
   position: fixed;
   top: 0;
@@ -19,10 +18,9 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   width: 300px;
   text-align: center;
-  position: relative; /* Потрібно для абсолютного позиціонування кнопки закриття */
+  position: relative;
 }
 
-/* Стиль для кнопки закриття з хрестиком */
 .closeBtn {
   position: absolute;
   top: 10px;
