--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f0f4f8; /* Легкий пастельний фон */
+  background-color: #f0f4f8;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -23,23 +23,21 @@ input[type="text"] {
 }
 
 ::-webkit-scrollbar {
-  width: 12px; /* Ширина скрол-бара */
-  background-color: #f1f1f1; /* Колір фону */
+  width: 12px;
+  background-color: #f1f1f1;
 }
 
-/* Стилизуем «ручку» скролл-бара */
 ::-webkit-scrollbar-thumb {
-  background-color: #66b2ff; /* Колір «ручки» */
-  border-radius: 10px; /* Закруглені кути */
+  background-color: #66b2ff;
+  border-radius: 10px;
 }
 
-/* Стилизуем «дорожку» (трека) скролл-бара */
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Колір фону трека */
+  background-color: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #007bff; /* Колір «ручки» при наведенні */
+  background-color: #007bff;
 }
 
 code {
